<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestResultActivity"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <ImageView
        android:id="@+id/sintomasCompatiblesIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_covid"
        android:contentDescription="@string/iconoAlertText" />

    <TextView
        android:id="@+id/textoSintomasCompatibles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/resultadoSintomasCompatibles"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sintomasCompatiblesIcon" />

    <TextView
        android:id="@+id/textoLlamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textSize="18sp"
        android:text="@string/covidLlamar"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sintomasCompatiblesIcon" />

    <Button
        android:id="@+id/botonLlamarAtencionCovid"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_primary"
        android:text="@string/covidLlamarBoton"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoLlamar" />

    <TextView
        android:id="@+id/textoMensajear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/covidMensajear"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botonLlamarAtencionCovid" />

    <Button
        android:id="@+id/botonMensajearCovid"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_primary"
        android:text="@string/covidMensajearBoton"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/botonVolverAHome" />


    <Button
        android:id="@+id/botonVolverAHome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_secondary"
        android:text="@string/botonVolverAHome"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>