<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_short"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/testResultContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintBottom_toTopOf="@id/btnGoToTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/testResultContainerTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/lastTestResult"
            android:background="@drawable/abm_form_title"
            android:gravity="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/testResultContainerBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abm_form_body"
            android:padding="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/testResultContainerTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/testResultData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/last_test_result_not_resolved"
                android:padding="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/iconLastTestResult"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:src="@drawable/ic_info"
                    android:contentDescription="@string/testResultIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/txtLastTestResult"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/testPlaceholder"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:textAllCaps="true"
                    app:layout_constraintTop_toBottomOf="@id/iconLastTestResult"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/txtDateLastTestResult"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/lastTestDatePlaceholder"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textAllCaps="true"
                    app:layout_constraintTop_toBottomOf="@id/txtLastTestResult"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnGoToTest"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_primary"
        android:text="@string/btnTest"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToEmergencyContacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGoToEmergencyContacts"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_primary"
        android:text="@string/btnEmergencyContacts"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/btnGoToEventList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGoToEventList"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_primary"
        android:text="@string/titleEventList"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/btnGoToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGoToLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_secondary"
        android:text="@string/btnSignOut"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>