<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergencyContactsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/contactFormTitle"
        android:background="@drawable/abm_form_title"
        android:gravity="center"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emergencyContactForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/abm_form_body"
        android:padding="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <EditText
            android:id="@+id/txtECName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/lblName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtECNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:maxLength="10"
            android:hint="@string/hintECNumber"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtECName" />

        <Button
            android:id="@+id/btnAddEmergencyContact"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_primary"
            android:text="@string/addContactButton"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtECNumber"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/lblEmergencyContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/helpEmergencyContact"
        android:textSize="16sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/emergencyContactListTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/titleContactList"
        android:background="@drawable/abm_form_title"
        android:gravity="center"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/emergencyContactForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listEmergencyContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/abm_form_body"
        android:padding="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</LinearLayout>